# Epitech

./: README.md
Area Angular:Spring/Back/area/: Dockerfile  compile.txt  pom.xml
Area Angular:Spring/Database_area/: Dockerfile
Area Angular:Spring/Front/Area/: package.json
Area Angular:Spring/Front/Area/src/: index.html
Area Angular:Spring/Mobile/: package.json
Area Angular:Spring/Mobile/Area/: angular.json  capacitor.config.ts  package-lock.json  package.json
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/: CMakeLists.txt
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/AdminRtype/: Makefile
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/AdminRtype/src/: Entity.hpp  Event.cpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/AdminRtype/src/components/: animation.hpp  music.hpp  parallax.hpp  position.cpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/AdminRtype/src/factory/: factory.hpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/AdminRtype/src/system/: magicsystem.cpp  magicsystem.hpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ClientRtype/src/: Network.cpp  main.cpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ClientRtype/src/components/: animation.cpp  animation.hpp  clickable.hpp  enemy.hpp  music.cpp  music.hpp  position.hpp  sprite.hpp  text.cpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ClientRtype/src/factory/: factory.cpp  factory.hpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ClientRtype/src/system/: magicsystem.cpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ServerRtype/: Makefile  main.cpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ServerRtype/Components/Enemy/: Enemy.hpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ServerRtype/Components/Fire/: Fire.cpp  Fire.hpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ServerRtype/Components/Lobby/: Lobby.hpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ServerRtype/Components/Player/: Player.hpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ServerRtype/GameEntity/Enemy/: EnemyEntity.cpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ServerRtype/GameEntity/Fire/: FireEntity.hpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ServerRtype/GameEntity/Lobby/: LobbyEntity.hpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ServerRtype/GameEntity/Player/: PlayerEntity.cpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ServerRtype/Server/: server.cpp  server.hpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/ServerRtype/Server/ToolsServer/: tools.cpp  tools.hpp
B-CPP-500-NCE-5-1-rtype-remi.desbordes-main/cmake/: FindlibXi-devel.cmake  Findsfml.cmake  Findvorbis.cmake
B-DEV-500-NCE-5-2-area-remi.desbordes-main/: docker-compose.yml  readme.MD
B-DEV-500-NCE-5-2-area-remi.desbordes-main/Back/Documentation/: about.json
B-DEV-500-NCE-5-2-area-remi.desbordes-main/Database_area/: Area.sql
B-DEV-500-NCE-5-2-area-remi.desbordes-main/Front/Area/: README.md  package-lock.json
B-DEV-500-NCE-5-2-area-remi.desbordes-main/Mobile/: package-lock.json
B-DEV-500-NCE-5-2-area-remi.desbordes-main/Mobile/Area/: Dockerfile
B-DOP-500-NCE-5-1-whanos-remi.desbordes-main/bash_scripts/: link-project.sh
B-DOP-500-NCE-5-1-whanos-remi.desbordes-main/images/c/: Dockerfile.standalone
B-DOP-500-NCE-5-1-whanos-remi.desbordes-main/images/java/: Dockerfile.standalone
B-DOP-500-NCE-5-1-whanos-remi.desbordes-main/images/javascript/: Dockerfile.standalone
Bomberman C++/: CMakeLists.txt  README.md  fast.sh  run.sh
Bomberman C++/Among_us/Among_us_blue/: Amongus_000012.mtl
Bomberman C++/Among_us/Among_us_red/: Amongus_000001.mtl
Bomberman C++/Include/: Bomb.hpp  Gameplay.hpp  Ia.hpp  Image_G.hpp  Player.hpp  Text.hpp  Tools.hpp  exception.hpp
Bomberman C++/Include/Core/: Core.hpp
Bomberman C++/Include/Heritage/: Background.hpp  Button.hpp  Cube.hpp  Music.hpp  Shader.hpp  Sound.hpp
Bomberman C++/Include/Logo/: Logo.hpp
Bomberman C++/Include/Menu/: Menu.hpp
Bomberman C++/Include/VirtualClass/: IAudio.hpp  IClick.hpp  ICollidable.hpp  IDraw.hpp  IHover.hpp  IShader.hpp
Bomberman C++/Ressources/: map.txt
Bomberman C++/Ressources/Text/: audio.txt  before.txt  graphic.txt  how_to_play.txt  loose.txt  option.txt  pause.txt  text.txt  victory.txt
Bomberman C++/Src/: main.cpp
Bomberman C++/Src/Core/: Core.cpp
Bomberman C++/Src/Game/: Gameplay.cpp  Player.cpp
Bomberman C++/Src/Heritage/: Background.cpp  Bomb.cpp  Button.cpp  Cube.cpp  Image.cpp  Music.cpp  Shader.cpp  Sound.cpp  Text.cpp
Bomberman C++/Src/Logo/: Logo.cpp
Bomberman C++/Src/Menu/: Menu.cpp
Gomoku IA Python/: .gitignore  compilationWindows.py  pbrain-gomoku-ai  pbrain-gomoku-ai.exe.spec  protocol.txt
Gomoku IA Python/Src/: commands.py  gomoku.py  ia.py
R-Type C++/: README.MD  build_linux.sh
R-Type C++/AdminRtype/src/: Event.hpp  Network.cpp  Network.hpp
R-Type C++/AdminRtype/src/components/: animation.cpp  collision.cpp  draw.hpp  enemy.cpp  enemy.hpp  movement.cpp  movement.hpp  music.cpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp
R-Type C++/AdminRtype/src/factory/: factory.cpp
R-Type C++/AdminRtype/src/system/: ISystem.hpp  InitScenes.cpp  my_system.hpp
R-Type C++/ClientRtype/: Makefile
R-Type C++/ClientRtype/src/: Network.hpp
R-Type C++/ClientRtype/src/components/: collision.hpp  enemy.cpp  movement.cpp  movement.hpp  shoot.cpp  shoot.hpp  sprite.cpp  text.hpp
R-Type C++/ClientRtype/src/system/: InitScenes.cpp  draw.cpp  draw.hpp  magicsystem.hpp
R-Type C++/ServerRtype/Components/Enemy/: Enemy.cpp
R-Type C++/ServerRtype/Components/Lobby/: Lobby.cpp
R-Type C++/ServerRtype/Components/Player/: Player.cpp
R-Type C++/ServerRtype/GameEntity/Enemy/: EnemyEntity.hpp
R-Type C++/cmake/: Findboost.cmake  Findudev.cmake
Whanos DevOPS/images/c/: Dockerfile.base
Whanos DevOPS/images/java/: Dockerfile.base
Whanos DevOPS/images/javascript/: Dockerfile.base
Whanos DevOPS/images/python/: Dockerfile.base  Dockerfile.standalone
Whanos DevOPS/jenkins/: job_dsl.groovy  whanos.yml
(+80 files in other folders)
